fix nav styles from bleeding down to content

--- a/src/components/Navigation/HamburgerMenu/index.module.less
+++ b/src/components/Navigation/HamburgerMenu/index.module.less
@@ -34,20 +34,20 @@ button {
   background: transparent;
 }
 
-ul,
-li {
+.ul,
+.li {
   margin: 0;
   padding: 0;
 }
 
-ul {
+.ul {
   padding: 25px;
   position: absolute;
   top: 100px;
   width: 230px;
 }
 
-li {
+.li {
   list-style: none;
   margin-bottom: 20px;
   display: flex;
