--- a/src/components/Navigation/Navbar.module.less
+++ b/src/components/Navigation/Navbar.module.less
@@ -55,13 +55,20 @@
 
 .navbarMenu {
   margin-right: 2%;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+  align-items: center;
 }
 
 .item {
   color: @purple;
   text-decoration: none;
   background-image: none;
+  margin: 0;
   margin-left: 18px;
+  font-size: @font-size--p;
 }
 
 .subscribe {
