--- a/src/components/Navigation/NavbarSimple.module.less
+++ b/src/components/Navigation/NavbarSimple.module.less
@@ -14,13 +14,20 @@
 
 .simpleMenu {
   margin-right: 2%;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+  align-items: center;
 }
 
 .simpleItem {
-  color: @green;
+  color: @yellow;
   text-decoration: none;
+  margin: 0;
   margin-left: 18px;
   background-image: none;
+  font-size: @font-size--p;
 }
 
 .simpleSubscribe {
